[project]
name = "subgram"
version = "0.0.4"
description = "Python SDK for subgram.io"
authors = [
  { name="Karim Iskakov", email="kar.iskakov@gmail.com" },
]
dependencies = [
    "httpx>=0.23.0, <1",
    "pydantic>=1.9.0, <3",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://github.com/subgram/subgram-python-sdk"
Issues = "https://github.com/subgram/subgram-python-sdk/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
